--- a/styles/globals.css
+++ b/styles/globals.css
@@ -75,6 +75,9 @@ a {
   width: 50%;
 }
 
+.toolBar{
+  width: 80%;
+}
 .campoFull{
   width: 100% !important;
 }
@@ -98,9 +101,18 @@ a {
   align-items: right;
 }
 
+.menu {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  align-items: center;
+  padding: 1rem 0;
+}
+
 ul.menu li {
   display:inline-block;
   padding-right: 1rem;
+  justify-content: center;
 }
 
 .white{
